# llm-wiki

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  main_server.py  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/skills/add-config/: SKILL.md
.claude/skills/add-route/: SKILL.md
.claude/skills/db-change/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/qa/: SKILL.md
.github/workflows/: ci.yml
app/: README.md
app/static/: README.md
app/static/css/: README.md  style.css
app/static/js/: README.md  app.js  graph.js
app/templates/: README.md  index.html
core/: README.md  chunking.py  config.py  constants.py  database.py  embeddings.py  extraction.py  ingest.py  lint.py  mcp_server.py  prompts.py  query.py  server.py  vault.py  watcher.py
core/db/: __init__.py  connection.py  jobs.py  pages.py  queue.py  reconcile.py  search.py
feature-designs/: p0-document-chunking.md  p0-ingest-progress.md  p0-semantic-search.md  p1-config-loading.md  p1-incremental-backlinks.md  p1-index-maintenance.md  p1-json-parsing-resilience.md  p1-queue-relative-paths.md  p2-dashboard-page-editing.md  p2-lint-coverage.md  p2-llm-call-timeout.md  p2-schema-migrations.md  p2-ssrf-protection.md
system-audit/: maintainability-evaluation-2026-05-25.md
tests/: conftest.py  test_config.py  test_database.py  test_ingest.py  test_lint.py  test_main.py  test_query.py  test_server.py  test_vault.py  test_watcher.py
tests/e2e/: conftest.py  test_cli.py  test_http.py  test_smoke.py
tests/integration/: conftest.py  test_config_resolution.py  test_ingest_pipeline.py  test_job_lifecycle.py  test_watcher_pipeline.py
